<resources>
    <string name="app_name">Sharp Chat</string>
    <string name="hello_blank_fragment">New Fragment</string>
    <string name="by_continuing_you_agree_to_our_terms_of_service_and_privacy_policy">By continuing, you agree to our Terms of Service and Privacy Policy.</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="join_sharp_chat_to_start_chatting_with_your_friends">Join Sharp Chat to start chatting with your friends.</string>
    <string name="connect_with_friends">Connect with friends</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="back_button">back button</string>
    <string name="more_options_button">action bar more options button</string>
    <string name="call_button">call button</string>
    <string name="fab_content_desc">new chat</string>
    <string name="phone_number">Phone number</string>
    <string name="didn_t_receive_code">Didn\'t receive code?</string>
    <string name="resend">Resend</string>
    <string name="verify">Verify</string>
    <string name="error_occurred">An error occurred</string>
    <string name="sharp_chat_is_more_than_just_messaging_app">Sharp chat is more than just messaging app</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="sign_up">Sign up</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="do_you_have_an_account">Do you have an account?</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="password_too_short">Password is too short</string>
    <string name="password_needs_number">Password requires at least 1 digit</string>
    <string name="password_needs_uppercase">Password requires at least 1 uppercase</string>
    <string name="password_needs_lowercase">Password requires at least 1 lowercase</string>
    <string name="continue_btn_text">Continue</string>
    <string name="invalid_phone_number">Invalid phone number</string>
    <string name="we_sent_a_6_digit_code_to_your_phone">We sent a 6-digit code to your phone</string>
    <string name="we_sent_a_6_digit_code_to_your_email">We sent a 6-digit code to your email</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="email_verified">Email verification successful</string>
    <string name="phone_verified">Phone number verification successful</string>
    <string name="invite">Invite</string>
    <string name="loading_more">Loading more...</string>
    <string name="no_contacts_found">No Contacts Found</string>
    <string name="your_contact_list_appears_to_be_empty">Your contact list appears to be empty</string>
    <string name="send_message">Send message</string>
    <string name="type_a_message">Type a message...</string>
    <string name="full_name">Full name</string>
</resources>